fixed the css in contact us page, reduced the spacing in header

--- a/src/app/component/root/root.component.scss
+++ b/src/app/component/root/root.component.scss
@@ -24,7 +24,7 @@ ws-app-public-nav-bar{
   padding-top: 56px;
 }
 .height-on-top-login{
-  padding-top: 100px;
+  padding-top: 60px;
 }
 .top-nav-bar {
   position: fixed;
