--- a/src/app/routes/public/public-contact/public-contact.component.scss
+++ b/src/app/routes/public/public-contact/public-contact.component.scss
@@ -47,3 +47,6 @@ p a {
     }
   }
 }
+.pd-top{
+  padding-top:64px;
+}
